[package]
name = "double-ratchet"
version = "0.1.0"
authors = ["S.R. Verschoor <sebastian@zeroknowledge.me>", "D. Pasirstein <>"]
edition = "2018"
description = "Double Ratchet key management for exchanging encrypted messages between two parties. (forked from https://github.com/sebastianv89/double-ratchet)"
repository = "https://github.com/dpasirst/double-ratchet-crux"
readme = "README.md"
keywords = ["double-ratchet", "forward-secrecy", "future-secrecy"]
categories = ["cryptography", "no-std"]
license = "BSD-3-Clause"


[dependencies]
async-trait = { version = "^0.1.88", optional = true }
hashbrown = "^0.16.1"
rand = "0.9.2"
rand_core = { version = "^0.9.3", features = ["os_rng"] }
serde = { version = "^1.0.219", features = ["derive", "serde_derive"], optional = true  }
serde_json = { version = "^1.0.146", optional = true }


[dev-dependencies]
clear_on_drop = "0.2"
# aesgcm is currently pre verification, aead is verified but for now, it only runs
# on x86_84. We could make this feature based but aesgcm will do for testing.
# https://github.com/cryspen/libcrux/issues/1269
libcrux-aesgcm = "0.0.4"
libcrux-ecdh = "0.0.4"
libcrux-hkdf = "0.0.4"
libcrux-hmac = "0.0.4"
subtle = "2"
tokio = { version = "1.45.0", features = ["full"] }

[features]
default = ["std", "serde", "test", "async"]
std = []
serde = ["dep:serde", "dep:serde_json"]
async = ["dep:async-trait"]
# Allow doctests with mock objects
# See: https://github.com/rust-lang/rust/issues/45599
test = []
